add accent to quienes somos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul class="contenedor-menu">
         <li class="item-titulo"> <h1><a href="">VALKYRIAS</a> </h1> </li>
         <li class="item-cuadro"> <a href="">EQUIPO</a></li>
-        <li class="item-cuadro"> <a href="">QUIENES SOMOS</a></li>
+        <li class="item-cuadro"> <a href="">QUI&EACUTE;NES SOMOS</a></li>
         <li class="item-cuadro menu-final"> <a href="">CONTACTO</a></li>
       </ul>
     </nav>
